--- a/web/package.json
+++ b/web/package.json
@@ -1,40 +1,35 @@
 {
   "name": "web",
-  "version": "0.0.0",
-  "type": "module",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "waku dev",
-    "build": "waku build",
-    "start": "waku start"
+    "build": "react-router build",
+    "dev": "react-router dev",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@base-ui-components/react": "1.0.0-beta.2",
-    "@fontsource/gasoek-one": "^5.2.6",
-    "@fontsource/geist": "^5.2.6",
-    "@instantdb/react": "^0.20.21",
-    "@react-oauth/google": "^0.12.2",
+    "@react-router/node": "^7.7.1",
+    "@react-router/serve": "^7.7.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk-base": "^0.0.8",
-    "convex": "^1.25.4",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.537.0",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "react-hot-toast": "^2.5.2",
-    "react-server-dom-webpack": "19.1.1",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.6",
-    "vite": "^7.1.1",
-    "waku": "0.24.0"
+    "isbot": "^5.1.27",
+    "lucide-react": "^0.539.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.7.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "4.1.11",
-    "@types/react": "19.1.9",
-    "@types/react-dom": "19.1.7",
-    "postcss": "8.5.6",
-    "tailwindcss": "4.1.11",
-    "typescript": "5.9.2"
+    "@react-router/dev": "^7.7.1",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/node": "^20",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.3.6",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.3",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
