--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "description": "Ato - Full-stack task management application",
   "scripts": {
-    "dev": "concurrently \"pnpm:dev:*\" --names \"API,WEB\" --prefix-colors \"blue,magenta\"",
+    "dev": "concurrently \"pnpm run dev:api\" \"pnpm run dev:web\" --names \"API,WEB\" --prefix-colors \"blue,magenta\"",
     "dev:api": "cd api && go run cmd/main.go",
     "dev:web": "cd web && pnpm dev",
     "build": "pnpm run build:web && pnpm run build:api",
     "build:web": "cd web && pnpm build",
     "build:api": "cd api && make build",
-    "start": "concurrently \"pnpm:start:*\" --names \"API,WEB\" --prefix-colors \"blue,magenta\"",
+    "start": "concurrently \"pnpm run start:api\" \"pnpm run start:web\" --names \"API,WEB\" --prefix-colors \"blue,magenta\"",
     "start:api": "cd api && ./bin/api",
     "start:web": "cd web && pnpm preview",
     "docker:up": "cd api && docker-compose up -d",
