--- a/web/components.json
+++ b/web/components.json
@@ -12,11 +12,11 @@
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
+    "components": "@components",
+    "utils": "@lib/utils",
+    "ui": "@components/ui",
+    "lib": "@lib",
+    "hooks": "@hooks"
   },
   "registries": {
     "@intentui": "https://intentui.com/r/{name}"
