feat: api logs with air + updated compose file with setup/startup scripts

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "start": "concurrently \"pnpm run start:api\" \"pnpm run start:web\" --names \"API,WEB\" --prefix-colors \"blue,magenta\"",
     "start:api": "cd api && ./bin/api",
     "start:web": "cd web && pnpm preview",
-    "docker:up": "cd api && docker-compose up -d",
-    "docker:down": "cd api && docker-compose down",
-    "docker:logs": "cd api && docker-compose logs -f",
+    "docker:up": "cd docker && docker-compose up -d",
+    "docker:down": "cd docker && docker-compose down",
+    "docker:logs": "cd docker && docker-compose logs -f",
     "test": "pnpm run test:api && pnpm run test:web",
     "test:api": "cd api && go test ./...",
     "test:web": "cd web && pnpm test",
