--- a/api/.env.example
+++ b/api/.env.example
@@ -1,7 +1,17 @@
+# API Configuration
 PORT=8080
-DATABASE_URL=postgres://ato_user:ato_password@localhost:5432/ato?sslmode=disable
-REDIS_URL=redis://:redis_password@localhost:6379/0
+
+# Database Configuration
+DATABASE_URL=postgres://admin:postgres@localhost:5432/ato?sslmode=disable
+
+# Redis Configuration
+REDIS_URL=redis://:redis@redis:6379/0
+
+# JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-in-production-min-32-chars
 JWT_EXPIRY=24h
 REFRESH_TOKEN_EXPIRY=168h
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:5174
+
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173,http://localhost:3000,http://127.0.0.1:3000
+FRONTEND_URL=http://localhost:3000
