--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@editorjs/editorjs": "^2.31.0",
     "@heroicons/react": "^2.2.0",
     "@intentui/icons": "^1.11.0",
     "@monicon/react": "^1.2.2",
@@ -38,11 +39,12 @@
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "tailwindcss": "^4.0.6",
-    "tailwindcss-react-aria-components": "^2.0.1"
+    "tailwindcss-react-aria-components": "^2.0.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.5",
-    "@iconify-json/hugeicons": "^1.2.17",
+    "@iconify-json/solar": "^1.2.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.10.2",
